--- a/EDS files.ipynb
+++ b/EDS files.ipynb
@@ -20,9 +20,9 @@
    "outputs": [],
    "source": [
     "# URL's of the excel files in a dictionary\n",
-    "urls = {'Curt_EDS': 'http://r20.rs6.net/tn.jsp?f=001PLCsbGU2GkiPna14uPTFoktfRgKQk6iP94Xcp4qC8fpWeRNtHhH-VEQC2dyEKp1dcQss-42HZixGleWTr-WtMSnmsk4vsycFwovrBJLmQxZYd3818RQehSH0OPDK-Ekhmz9wnDsfZ87hKSH1PxeHLy6rlPmer6MLElM9p09Tdw4Yc8LKgP4Ef9NfUg0ThXF2PQZJrCbQUrc=&c=GrH9W4zdhH7n8LmSv_HJBfv-3S8slLpkFeb1JJFDxHw3RyfW1i2C4g==&ch=HBekfdxOFK4_7Phniqj2AyBmY2THO4LoAnwcXu3bkCvKkRnNxhXtFg==',\n",
-    "        'Aries_EDS':'http://r20.rs6.net/tn.jsp?f=001OLsKKOVFg6tHel8qlmacHAYzmn7PM_tLyVzYDX9jqp1_XRmZqn_vtTdfxEhfuhYNKE7YuWDSRZXQ8QAaCuMqjPmlG-gb_7CQSbJJVz73tiBXxEEIYdNDkeweTnlNHve1q7qXs80mb4lLb8OR6kAGm2k9wFZNgfaovQwd5MIu5JFWXd-b6_jSyz29yRHhTKwGFlLGyhjE2o0=&c=tD-5isLQ5tdV6pxkqEjDNeM8fgfEC9SEqnZFJUuzA9heSIWHHAW7Hw==&ch=-fKBt8vruWRS6dreYlBQg18P_NhAdETZooJ-7imMFKTMAhvgVIWe-A==',\n",
-    "        'Luverne_EDS':'http://r20.rs6.net/tn.jsp?f=001DrJG37S6AAsNVhWJfdjXBqyJdhmE3nLZ4WAwhPMdCnqluRvZJBiXZ04Imfh9AHHSd2kSeT9ZZltLzYBSpIAKIQjPQrnKi0Vo4deaveCb2549El2MUyCFJz9msnDBLTC1xnwiXTwcXtiuUqzylRnx49m1kFNyxfayhIeqI-elUuh1MAt15QOCiwM1vheQfAPMjFKhLuZB8rE=&c=94mcNG-1z8617wRBe4nyE7_wQdUE1DLthGAMMje1SCM4MlPKiAy53A==&ch=GZZMq3fOepaSr-OuYcteH355VH6keU40BSHDVuPVvaIFvN8hj3Frow=='\n",
+    "urls = {'Curt_EDS': 'Put your URL",
+    "        'Aries_EDS':'Put your URL",
+    "        'Luverne_EDS':'Put your URL",
     "        }"
    ]
   },
