--- a/EDS files.ipynb
+++ b/EDS files.ipynb
@@ -20,9 +20,9 @@
    "outputs": [],
    "source": [
     "# URL's of the excel files in a dictionary\n",
-    "urls = {'Curt_EDS': 'Put your URL",
-    "        'Aries_EDS':'Put your URL",
-    "        'Luverne_EDS':'Put your URL",
+    "urls = {'Curt_EDS': 'Put your URL',
+    "        'Aries_EDS':'Put your URL',
+    "        'Luverne_EDS':'Put your URL'
     "        }"
    ]
   },
